# DSA5101-Project

./: decision_tree.ipynb  main.ipynb  main.py  pyproject.toml  svm.ipynb  test.py  test2.py
data/: testdata.txt  traininingdata.txt
model/: model.pth  model_1500.pth  model_15000.pth
wandb/run-20230913_013542-vmtjfp9l/files/: config.yaml  requirements.txt  wandb-metadata.json
