[tool.poetry]
name = "proj-dsa5101"
version = "0.1.0"
description = ""
authors = ["ZZDirty <muztaga2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "proj_dsa5101"}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.2"
ipykernel = "^6.25.1"
scikit-learn = "^1.3.0"
torch = "^2.0.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
