[tool.poetry]
name = "proj-dsa5101"
version = "0.1.0"
description = ""
authors = ["ZZDirty <muztaga2@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "proj_dsa5101" }]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.2"
ipykernel = "^6.25.1"
scikit-learn = "^1.3.0"
tqdm = "^4.66.1"
wandb = "^0.15.10"

torch = { version = "^2.0.1+cu118", source = "torch-cu118" }
torchvision = { version = "^0.15.2+cu118", source = "torch-cu118" }
torchaudio = { version = "^2.0.2+cu118", source = "torch-cu118" }

[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
